fix tasks links

--- a/pages/tasks.html
+++ b/pages/tasks.html
@@ -511,7 +511,7 @@
                   </p>
                   <p
                     class="text1 tasks__image-name"
-                    data-src="../images/tasks/3.jpeg"
+                    data-src="https://cdn.rawgit.com/bread2077/temp/main/images/tasks/3.jpeg"
                   >
                     Пример скриншота:
                   </p>
@@ -610,7 +610,7 @@
                   </p>
                   <p
                     class="text1 tasks__image-name"
-                    data-src="../images/tasks/4.jpeg"
+                    data-src="https://cdn.rawgit.com/bread2077/temp/main/images/tasks/4.jpeg"
                   >
                     Пример скриншота:
                   </p>
@@ -695,7 +695,7 @@
                   </p>
                   <p
                     class="text1 tasks__image-name"
-                    data-src="../images/tasks/5.jpeg"
+                    data-src="https://cdn.rawgit.com/bread2077/temp/main/images/tasks/5.jpeg"
                   >
                     Пример скриншота:
                   </p>
@@ -780,7 +780,7 @@
                   </p>
                   <p
                     class="text1 tasks__image-name"
-                    data-src="../images/tasks/6.jpeg"
+                    data-src="https://cdn.rawgit.com/bread2077/temp/main/images/tasks/6.jpeg"
                   >
                     Пример скриншота:
                   </p>
