remove tg reaction

--- a/pages/tasks.html
+++ b/pages/tasks.html
@@ -285,7 +285,7 @@
         </div>
       </section>
       <section class="tasks">
-        <divc class="tasks__inner">
+        <div class="tasks__inner">
           <h2 class="title1-bold tasks__title">
             <span class="tasks__accent">Выполняй задания</span> и увеличивай
             свой баланс
@@ -295,7 +295,7 @@
             баланс, выполнив предложенные задания. Выполнить каждое задание
             можно будет только один раз.
           </p>
-        </divc>
+        </div>
         <ul class="tasks__list">
           <li class="tasks__item">
             <h3 class="title5-bold tasks__card-title">
