feat: add child page

--- a/pages/child-panel.html
+++ b/pages/child-panel.html
@@ -294,7 +294,9 @@
               демо-версии:
             </h3>
             <ul class="list child-benefits__card-list">
-              <li class="child-benefits__card-item">
+              <li
+                class="child-benefits__card-item child-benefits__card-item_is-main"
+              >
                 <h4 class="text1 child-benefits__card-text">
                   Ссылка на демонстрационную версию:
                 </h4>
