feat: add child-tutorial component

--- a/pages/child-panel.html
+++ b/pages/child-panel.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Анатолий Чуднов" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="../style/typography.v1.css" />
-    <link rel="stylesheet" href="../style/common.v1.css" />
+    <link rel="stylesheet" href="../style/typography.v2.css" />
+    <link rel="stylesheet" href="../style/common.v2.css" />
 
     <link rel="stylesheet" href="../style/child-pannel.css" />
 
@@ -504,6 +504,16 @@
           </button>
         </form>
       </section>
+      <a href="/" class="link child-tutorial" download>
+        <h2 class="title2-bold child-tutorial__title">
+          Инструкция по настройке сайта
+        </h2>
+        <img
+          class="child-tutorial__image"
+          src="../images/icons/download.png"
+          alt=""
+        />
+      </a>
       <section class="child-faq">
         <h2 class="title1-bold child-faq__title">
           <span class="accent-text">Ответы</span> на часто задаваемые вопросы
@@ -893,136 +903,3 @@
     </div>
   </body>
 </html>
-
-<ul class="payment__list">
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/iomoney-logo.svg"
-      alt="Юмани"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/mir-logo.svg"
-      alt="Мир"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/qiwi-logo.svg"
-      alt="Киви"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/visa-logo.svg"
-      alt="Виза"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/mastercard-logo.svg"
-      alt="Мастеркард"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/wm-logo.svg"
-      alt="Вебмани"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/image 7.png"
-      alt="Оплата"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/image 8.png"
-      alt="Оплата"
-      class="payment__image"
-    />
-  </li>
-</ul>
-<ul aria-hidden="true" class="payment__list">
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/iomoney-logo.svg"
-      alt="Юмани"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/mir-logo.svg"
-      alt="Мир"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/qiwi-logo.svg"
-      alt="Киви"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/visa-logo.svg"
-      alt="Виза"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/mastercard-logo.svg"
-      alt="Мастеркард"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/payments/wm-logo.svg"
-      alt="Вебмани"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/image 7.png"
-      alt="Оплата"
-      class="payment__image"
-    />
-  </li>
-  <li class="payment__item">
-    <img
-      loading="lazy"
-      src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/image 8.png"
-      alt="Оплата"
-      class="payment__image"
-    />
-  </li>
-</ul>
