feat: add child-tutorial component

--- a/pages/child-panel.html
+++ b/pages/child-panel.html
@@ -504,7 +504,11 @@
           </button>
         </form>
       </section>
-      <a href="/" class="link child-tutorial" download>
+      <a
+        href="../files/manual_franshiza.pdf"
+        class="link child-tutorial"
+        download
+      >
         <h2 class="title2-bold child-tutorial__title">
           Инструкция по настройке сайта
         </h2>
