feat: add child-tutorial component

--- a/pages/child-panel.html
+++ b/pages/child-panel.html
@@ -504,19 +504,25 @@
           </button>
         </form>
       </section>
+
       <a
         href="../files/manual_franshiza.pdf"
         class="link child-tutorial"
         download
       >
-        <h2 class="title2-bold child-tutorial__title">
-          Инструкция по настройке сайта
-        </h2>
-        <img
-          class="child-tutorial__image"
-          src="../images/icons/download.png"
-          alt=""
-        />
+        <div class="child-tutorial__inner child-tutorial__inner_type_title">
+          <h2 class="title2-bold child-tutorial__title">
+            Инструкция по настройке сайта
+          </h2>
+        </div>
+
+        <div class="child-tutorial__inner child-tutorial__inner_type_image">
+          <img
+            class="child-tutorial__image"
+            src="../images/icons/download.png"
+            alt=""
+          />
+        </div>
       </a>
       <section class="child-faq">
         <h2 class="title1-bold child-faq__title">
