feat: add child-tutorial

--- a/pages/child-panel.html
+++ b/pages/child-panel.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../dist/base.bf62d887ffeebbe2edd0.css" />
     <link rel="stylesheet" href="../dist/social.602229dacdbe52dda217.css" />
     <script defer src="../dist/base.bf62d887ffeebbe2edd0.js"></script>
-    <script type="module" src="../scripts/pages/child-pannel.js"></script>
+    <script type="module" src="../scripts/pages/child-pannel.v1.js"></script>
   </head>
   <body class="root">
     <header class="header">
@@ -506,7 +506,7 @@
       </section>
 
       <a
-        href="../files/manual_franshiza.pdf"
+        href="https://cdn.rawgit.com/bread2077/temp/main/files/manual_franshiza.pdf"
         class="link child-tutorial"
         download
       >
@@ -519,7 +519,7 @@
         <div class="child-tutorial__inner child-tutorial__inner_type_image">
           <img
             class="child-tutorial__image"
-            src="../images/icons/download.png"
+            src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/download.png"
             alt=""
           />
         </div>
