--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -157,7 +157,7 @@
               class="reg-menu__short-item-img"
               src="../images/icons/history.png"
               alt=""
-            /><span class="text2">Мои заказы</span>
+            /><span class="menu">Мои заказы</span>
           </a>
         </li>
         <li>
@@ -166,7 +166,7 @@
               class="reg-menu__short-item-img"
               src="../images/icons/list.png"
               alt=""
-            /><span class="text2">Услуги</span>
+            /><span class="menu">Услуги</span>
           </a>
         </li>
         <li class="reg-menu__short-item reg-menu__short-item-accent">
@@ -178,7 +178,7 @@
               class="reg-menu__short-item-img"
               src="../images/icons/money.png"
               alt=""
-            /><span class="text2">Пополнить</span></a
+            /><span class="menu">Пополнить</span></a
           >
         </li>
         <li>
@@ -187,7 +187,7 @@
               class="reg-menu__short-item-img"
               src="../images/icons/burger.png"
               alt=""
-            /><span class="text2">Меню</span>
+            /><span class="menu">Меню</span>
           </button>
         </li>
       </ul>
