--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -28,7 +28,7 @@
         ></a>
         <ul class="list reg-menu__long-list">
           <li>
-            <a class="text1 link reg-menu__long-item" href="/">
+            <a class="title5 link reg-menu__long-item" href="/">
               <img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li>
-            <a class="text1 link reg-menu__long-item" href="/">
+            <a class="title5 link reg-menu__long-item" href="/">
               <img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -46,7 +46,7 @@
             </a>
           </li>
           <li>
-            <a class="text1 link reg-menu__long-item" href="/">
+            <a class="title5 link reg-menu__long-item" href="/">
               <img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -55,7 +55,7 @@
             </a>
           </li>
           <li>
-            <a class="text1 link reg-menu__long-item" href="/">
+            <a class="title5 link reg-menu__long-item" href="/">
               <img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -64,7 +64,7 @@
             </a>
           </li>
           <li>
-            <a class="text1 link reg-menu__long-item" href="/"
+            <a class="title5 link reg-menu__long-item" href="/"
               ><img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -73,7 +73,7 @@
             >
           </li>
           <li>
-            <a class="text1 link reg-menu__long-item" href="/"
+            <a class="title5 link reg-menu__long-item" href="/"
               ><img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -82,7 +82,7 @@
             >
           </li>
           <li>
-            <a class="text1 link reg-menu__long-item" href="/"
+            <a class="title5 link reg-menu__long-item" href="/"
               ><img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -91,7 +91,7 @@
             >
           </li>
           <li>
-            <a class="text1 link reg-menu__long-item" href="/">
+            <a class="title5 link reg-menu__long-item" href="/">
               <img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -100,7 +100,7 @@
             >
           </li>
           <li>
-            <a class="text1 link reg-menu__long-item" href="/">
+            <a class="title5 link reg-menu__long-item" href="/">
               <img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -109,7 +109,7 @@
             >
           </li>
           <li class="text1 reg-menu__long-item">
-            <a class="text1 link reg-menu__long-item" href="/"
+            <a class="title5 link reg-menu__long-item" href="/"
               ><img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
@@ -118,7 +118,7 @@
             >
           </li>
           <li class="text1 reg-menu__long-item">
-            <a class="text1 link reg-menu__long-item" href="/"
+            <a class="title5 link reg-menu__long-item" href="/"
               ><img
                 class="reg-menu__long-icon"
                 src="../images/icons/reg-menu.png"
