--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -155,7 +155,7 @@
           <a class="reg-menu__short-item" href="">
             <img
               class="reg-menu__short-item-img"
-              src="../images/icons/history.png"
+              src="../images/icons/history.svg"
               alt=""
             /><span class="menu">Мои заказы</span>
           </a>
@@ -164,7 +164,7 @@
           <a class="reg-menu__short-item" href="">
             <img
               class="reg-menu__short-item-img"
-              src="../images/icons/list.png"
+              src="../images/icons/list.svg"
               alt=""
             /><span class="menu">Услуги</span>
           </a>
@@ -176,7 +176,7 @@
           <a class="reg-menu__short-item" href=""
             ><img
               class="reg-menu__short-item-img"
-              src="../images/icons/money.png"
+              src="../images/icons/money.svg"
               alt=""
             /><span class="menu">Пополнить</span></a
           >
@@ -185,7 +185,7 @@
           <button class="reg-menu__short-item reg-menu__button">
             <img
               class="reg-menu__short-item-img"
-              src="../images/icons/burger.png"
+              src="../images/icons/burger.svg"
               alt=""
             /><span class="menu">Меню</span>
           </button>
