--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="../style/common.v2.css" />
 
     <link rel="stylesheet" href="../style/reg-menu.css" />
+    <link rel="stylesheet" href="../style/child-pannel.v1.css" />
 
     <link rel="stylesheet" href="../dist/base.bf62d887ffeebbe2edd0.css" />
     <link rel="stylesheet" href="../dist/social.602229dacdbe52dda217.css" />
     <script defer src="../dist/base.bf62d887ffeebbe2edd0.js"></script>
     <script type="module" src="../scripts/pages/reg-menu.js"></script>
+    <script type="module" src="../scripts/pages/child-pannel.js"></script>
   </head>
   <body class="root">
     <nav class="reg-menu">
