--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -194,7 +194,7 @@
         </li>
       </ul>
     </nav>
-    <main class="content">
+    <main style="padding-top: 0px" class="content">
       <section
         class="social-intro {% if user['auth'] %} social-intro_reg-styled {% else %} social-intro_unreg-styled {% endif %}"
       >
