--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -166,7 +166,7 @@
           <a class="reg-menu__short-item" href="">
             <img
               class="reg-menu__short-item-img"
-              src="../images/icons/list.png"
+              src="../images/icons/price.png"
               alt=""
             /><span class="menu">Услуги</span>
           </a>
