--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -21,114 +21,8 @@
   </head>
   <body class="root">
     <nav class="reg-menu">
-      <div class="reg-menu__long">
-        <div class="title3 reg-menu__long-ballance">499.24 &#8381;</div>
-        <a
-          class="reg-menu__long-settings"
-          href="/"
-          aria-label="Перейти на страницу настроек"
-        ></a>
-        <ul class="list reg-menu__long-list">
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/">
-              <img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Новый заказ</span>
-            </a>
-          </li>
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/">
-              <img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>История заказов</span>
-            </a>
-          </li>
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/">
-              <img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Пополнить баланс</span>
-            </a>
-          </li>
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/">
-              <img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Поддержка</span>
-            </a>
-          </li>
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/"
-              ><img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Цены</span></a
-            >
-          </li>
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/"
-              ><img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Партнерская программа</span></a
-            >
-          </li>
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/"
-              ><img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Франшиза</span></a
-            >
-          </li>
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/">
-              <img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>API</span></a
-            >
-          </li>
-          <li>
-            <a class="title5 link reg-menu__long-item" href="/">
-              <img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Обновления услуг</span></a
-            >
-          </li>
-          <li class="text1 reg-menu__long-item">
-            <a class="title5 link reg-menu__long-item" href="/"
-              ><img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Бесплатная накрутка</span></a
-            >
-          </li>
-          <li class="text1 reg-menu__long-item">
-            <a class="title5 link reg-menu__long-item" href="/"
-              ><img
-                class="reg-menu__long-icon"
-                src="../images/icons/reg-menu.png"
-                alt=""
-              /><span>Задания</span></a
-            >
-          </li>
-        </ul>
+      <div class="reg-menu__long reg-menu__long_opened">
+        <div class="title3 reg-menu__long-ballance">&#8381;&nbsp;499.24</div>
         <div class="reg-menu__socials">
           <a class="reg-menu__social" href="/">
             <img
@@ -145,6 +39,114 @@
             />
           </a>
         </div>
+        <div class="reg-menu__long-inner-container">
+          <ul class="list reg-menu__long-list">
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/">
+                <img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Новый заказ</span>
+              </a>
+            </li>
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/">
+                <img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>История заказов</span>
+              </a>
+            </li>
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/">
+                <img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Пополнить баланс</span>
+              </a>
+            </li>
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/">
+                <img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Поддержка</span>
+              </a>
+            </li>
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/"
+                ><img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Цены</span></a
+              >
+            </li>
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/"
+                ><img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Партнерская программа</span></a
+              >
+            </li>
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/"
+                ><img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Франшиза</span></a
+              >
+            </li>
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/">
+                <img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>API</span></a
+              >
+            </li>
+            <li>
+              <a class="title5 link reg-menu__long-item" href="/">
+                <img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Обновления услуг</span></a
+              >
+            </li>
+            <li class="text1 reg-menu__long-item">
+              <a class="title5 link reg-menu__long-item" href="/"
+                ><img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Бесплатная накрутка</span></a
+              >
+            </li>
+            <li class="text1 reg-menu__long-item">
+              <a class="title5 link reg-menu__long-item" href="/"
+                ><img
+                  class="reg-menu__long-icon"
+                  src="../images/icons/reg-menu.png"
+                  alt=""
+                /><span>Задания</span></a
+              >
+            </li>
+          </ul>
+        </div>
+        <a
+          class="reg-menu__long-settings"
+          href="/"
+          aria-label="Перейти на страницу настроек"
+        ></a>
         <button
           class="text1 reg-menu__exit"
           onclick="location.href = '/logout'"
