--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -21,7 +21,7 @@
   </head>
   <body class="root">
     <nav class="reg-menu">
-      <div class="reg-menu__long reg-menu__long_opened">
+      <div class="reg-menu__long">
         <div class="title3 reg-menu__long-ballance">&#8381;&nbsp;499.24</div>
         <div class="reg-menu__socials">
           <a class="reg-menu__social" href="/">
