feat: add bottom page

--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Анатолий Чуднов" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="../style/typography.v2.css" />
+    <link rel="stylesheet" href="../style/typography.v3.css" />
     <link rel="stylesheet" href="../style/common.v2.css" />
 
     <link rel="stylesheet" href="../style/reg-menu.css" />
@@ -45,7 +45,7 @@
               <a class="title5 link reg-menu__long-item" href="/">
                 <img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Новый заказ</span>
               </a>
@@ -63,7 +63,7 @@
               <a class="title5 link reg-menu__long-item" href="/">
                 <img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Пополнить баланс</span>
               </a>
@@ -72,7 +72,7 @@
               <a class="title5 link reg-menu__long-item" href="/">
                 <img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Поддержка</span>
               </a>
@@ -81,7 +81,7 @@
               <a class="title5 link reg-menu__long-item" href="/"
                 ><img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Цены</span></a
               >
@@ -90,7 +90,7 @@
               <a class="title5 link reg-menu__long-item" href="/"
                 ><img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Партнерская программа</span></a
               >
@@ -99,7 +99,7 @@
               <a class="title5 link reg-menu__long-item" href="/"
                 ><img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Франшиза</span></a
               >
@@ -108,7 +108,7 @@
               <a class="title5 link reg-menu__long-item" href="/">
                 <img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>API</span></a
               >
@@ -117,7 +117,7 @@
               <a class="title5 link reg-menu__long-item" href="/">
                 <img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Обновления услуг</span></a
               >
@@ -126,7 +126,7 @@
               <a class="title5 link reg-menu__long-item" href="/"
                 ><img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Бесплатная накрутка</span></a
               >
@@ -135,7 +135,7 @@
               <a class="title5 link reg-menu__long-item" href="/"
                 ><img
                   class="reg-menu__long-icon"
-                  src="../images/icons/reg-menu.png"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/icons/reg-menu.png"
                   alt=""
                 /><span>Задания</span></a
               >
@@ -158,8 +158,6 @@
         <li>
           <a class="reg-menu__short-item" href="">
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-            <!-- Created with Inkscape (http://www.inkscape.org/) -->
-
             <svg
               width="135.05701mm"
               height="123.76mm"
