feat: add bottom page

--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../style/typography.v3.css" />
     <link rel="stylesheet" href="../style/common.v2.css" />
 
-    <link rel="stylesheet" href="../style/reg-menu.css" />
+    <link rel="stylesheet" href="../style/reg-menu.v1.css" />
     <link rel="stylesheet" href="../style/child-pannel.v1.css" />
 
     <link rel="stylesheet" href="../dist/base.bf62d887ffeebbe2edd0.css" />
@@ -22,7 +22,9 @@
   <body class="root">
     <nav class="reg-menu">
       <div class="reg-menu__long">
-        <div class="title3 reg-menu__long-ballance">&#8381;&nbsp;499.24</div>
+        <a href="/addfunds" class="title3 reg-menu__long-ballance"
+          >&#8381;&nbsp;499.24</a
+        >
         <div class="reg-menu__socials">
           <a class="reg-menu__social" href="/">
             <img
