feat: add mobile-header

--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -27,7 +27,7 @@
             >SMM<span class="logo-accent">PRIME</span></span
           >
         </a>
-        <a class="menu-text mobile-header__link" href="/addfunds"
+        <a class="title5 mobile-header__link" href="/addfunds"
           >867.12 &#8381;</a
         >
       </div>
